# ice-fishing

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
include/: common_defs.h  drawing_utils.h  game_logic.h  text.h
include/obstacle/: barrel.h  crab.h  obstacle.h
src/: common_defs.h  drawing_utils.c  drawing_utils.h  game_logic.c  game_logic.h  main.c  text.c
src/fish/: fish.c  fish.h  normal_fish.c  normal_fish.h  updown_fish.c  updown_fish.h
src/obstacle/: barrel.c  barrel.h  crab.c  jellyfish.c  jellyfish.h  obstacle.c  obstacle.h
